# FashionAgent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GUIDE.md  README.md  fashionClaw.md  pyproject.toml
config/: clawbot.example.yaml  profile.bootstrap.example.yaml  profile.bootstrap.yaml
docker/: clawbot.Dockerfile  docker-compose.yml
docs/: commands.md
docs/runbooks/: README.md  daily-outfit-failed.md  database-locked.md  discord-token-expired.md  disk-full.md  inbox-stuck.md  llm-unavailable.md
docs/superpowers/plans/: 2026-05-14-image-pipeline.md
docs/superpowers/specs/: 2026-05-14-image-pipeline-design.md
secrets/: .env.example
src/clawbot/: __init__.py  config.py  discord_secrets.py  main.py  profile.py  scheduler.py
src/clawbot/db/: __init__.py  connection.py  migrate.py  repo.py
src/clawbot/db/migrations/: 0001_init.sql
src/clawbot/discord/: __init__.py  bot.py  images.py
src/clawbot/discord/cogs/: health.py  items.py  profile.py  wardrobe.py
src/clawbot/inbox/: __init__.py  disk_check.py  email_parser.py  notify.py  watcher.py
src/clawbot/maintenance/: __init__.py  backup.py  vacuum.py
src/clawbot/outfits/: __init__.py  adapter.py  candidates.py  collage.py  compatibility.py  daily.py  llm.py  llm_schema.py  persist.py  score.py  types.py
src/clawbot/scripts/: __init__.py  bootstrap_profile.py
src/clawbot/vision/: __init__.py  classify.py  color.py  cutout.py  draft.py  embed.py  models.py  ocr.py  pipeline.py  taxonomy.py
tests/: conftest.py  test_config.py  test_db.py  test_discord_config.py  test_profile.py
tests/discord/: conftest.py  test_bot.py  test_health.py  test_item_images.py  test_items_cmd.py  test_profile_cmd.py  test_wardrobe_cmd.py
tests/inbox/: conftest.py  test_discover.py  test_disk_check.py  test_email_parser.py  test_notify.py  test_process_email.py  test_process_one.py  test_scheduler.py  test_sweep.py
tests/maintenance/: test_backup.py  test_vacuum.py
tests/outfits/: conftest.py  test_adapter.py  test_candidates.py  test_collage.py  test_compatibility.py  test_daily.py  test_llm.py  test_persist.py  test_score.py  test_score_properties.py
tests/vision/: conftest.py  test_api.py  test_classify.py  test_color.py  test_cutout.py  test_draft.py  test_embed.py  test_models.py  test_ocr.py  test_pipeline.py  test_taxonomy.py
tests/vision/integration/: conftest.py  test_end_to_end.py
