[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "clawbot"
version = "0.1.0"
description = "Local-only personal fashion assistant."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Fidel Quezada-Guzman" }]

# Runtime dependencies — kept lean. Foundation only for now; image-pipeline and
# Discord deps are added in their respective build steps so we don't pay
# install cost up front for code that doesn't exist yet.
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "PyYAML>=6.0,<7",
    "structlog>=24.1,<25",
    "sqlite-vec>=0.1.6",          # SQLite extension for vector search
]

[project.optional-dependencies]
# Step 5+ image pipeline. Install on the NUC only, not on the dev Mac.
vision = [
    "rembg>=2.0.57",
    "Pillow>=10.3",
    "colorthief>=0.2.1",
    "open-clip-torch>=2.24",      # Fashion-CLIP loads via this lib
    "torch>=2.2,<3",
    "torchvision>=0.17",
    "pytesseract>=0.3.10",
]
# Step 6+ Discord layer.
discord = [
    "discord.py>=2.4,<3",
]
# Step 8+ scheduler + filesystem watcher.
scheduler = [
    "APScheduler>=3.10,<4",
    "watchdog>=4.0",
]
# Step 9 email parsing.
email = [
    "mail-parser>=3.15",
]
# Step 11 Ollama HTTP client.
llm = [
    "httpx>=0.27,<1",
]
# Step 13 FastAPI healthz endpoint.
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]

# Dev tooling — pytest, linters, formatters.
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",          # Property tests for the outfit scorer (step 10)
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # Unit-test deps for the vision package. The heavy stages (rembg, torch,
    # pytesseract) live in the [vision] extra and are mocked in unit tests,
    # but synthetic-image fixtures and fake-embedding arrays still need these.
    "numpy>=1.26",
    "Pillow>=10.3",
    "colorthief>=0.2.1",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool config
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that require Ollama or external services to be running",
    "slow: tests that exceed 1 second",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Long lines are fine in tests / fixtures

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src", "tests"]
